--- a/imwt/NewYorker.html
+++ b/imwt/NewYorker.html
@@ -1,4 +1,10 @@
-January 28, 2019 Issue
+
+<head>
+    <meta>January 28, 2019 Issue </meta>
+    <style type="text/css">
+        
+    </style>
+</head>
 <h1>Does Journalism Have a Future?</h1>
 <p><i>In an era of social media and fake news, journalists who have survived the print plunge have new foes to face.</i></p>
 <p><b>By Jill Lepore</b></p></p>
