--- a/mve/scenario.html
+++ b/mve/scenario.html
@@ -52,7 +52,7 @@
 * [[&quot;Scenes from the New Testament&quot;|Free-roaming mode]](click: &quot;Scenes from the New Testament&quot;)[(set: $chosenArt to &quot;NewTest&quot;)]
 * [[&quot;Musicians in the Cave of the Musicians&quot;|Free-roaming mode]](click: &quot;Musicians in the Cave of the Musicians&quot;)[(set: $chosenArt to &quot;Musicians&quot;)]
 ]</tw-passagedata><tw-passagedata pid="8" name="China" tags="" position="450,525" size="100,100">(print: &quot;&lt;img src=&#39;char/china.jpg&#39;&gt;&quot;)
-(print: &quot;&lt;img src=&#39;&quot; + $uri + &quot;&#39;&gt;&quot;)
+(print: &quot;&lt;img src=&#39;img/chinaBuddha.jpg&#39;&gt;&quot;)
 In China, ultramarine called &quot;Buddhist Blue,&quot; symbolizing the sacred. This term reflects the deep reverence for lapis lazuli among the people of the Silk Road, where it was not just a gemstone but a conduit of cultural exchange and spiritual significance.I am  from the Tang Dynasty, hailing from Kucha in the Western Regions. This place is a crucial stop along the Silk Road and a significant hub for lapis lazuli. From the ancient mines of Badakhshan Province in Afghanistan, lapis lazuli traveled along the Silk Road and reached our city of Kucha.
 
 Here in Kucha, lapis lazuli is widely used in decorations and religious artifacts. In our place, statues and murals often use lapis lazuli powder to create that unique deep blue hue. This color symbolizes the divine and eternity, evoking tranquility and serenity during prayers and meditation. Monks in the temples carve the eyes of Buddha statues with lapis lazuli because we believe it imbues them with sacred power and wisdom.
@@ -72,7 +72,7 @@ I still remember the time when my father and I went to the market, and he pointe
 
 [[Previous|Afghanistan]]														
 [[Next|Uzbekistan]]</tw-passagedata><tw-passagedata pid="9" name="Uzbekistan" tags="" position="450,700" size="100,100">(print: &quot;&lt;img src=&#39;char/uzb.jpg&#39;&gt;&quot;)
-(print: &quot;&lt;img src=&#39;&quot; + $uri + &quot;&#39;&gt;&quot;)
+(print: &quot;&lt;img src=&#39;img/Uzbek.jpg&#39;&gt;&quot;)
 I am an Uzbek woman from the beautiful city of Samarkand. This ancient city is not only a dazzling gem on the Silk Road but also a crucial witness to our rich cultural and historical heritage. Here, lapis lazuli, the deep blue gemstone, holds a significant and profound history. Today, I want to share with you the story of lapis lazuli in Uzbekistan, particularly in relation to the famous Afrasiab murals.
 The Afrasiab murals, also known as the &quot;Paintings of the Ambassadors,&quot; are a rare example of Sogdian art. These murals date back to the middle of the 7th century CE, probably painted between 648 and 651 CE. During this time, the Western Turkic Khaganate was in decline, and the Tang Dynasty&#39;s influence was expanding in Central Asia. Amidst this turbulent historical backdrop, lapis lazuli was used as a vital pigment to depict various scenes on the mural s.
 The Afrasiab murals depict scenes from three or four lands neighboring Central Asia on four walls of a room in a private house. On the northern wall, there is a Chinese festival, with the Empress on a boat and the Emperor hunting. The southern wall features Samarkand, showing a religious funerary procession in honor of the ancestors during the Nowruz festival. The eastern wall, although largely destroyed, depicts India as the land of astrologers and pygmies.
@@ -83,8 +83,8 @@ I hope that through my narrative, you can better understand the history and sign
 
 [[Previous|China]]
 [[Next|Iran]]</tw-passagedata><tw-passagedata pid="10" name="Iran" tags="" position="550,600" size="100,100">(print: &quot;&lt;img src=&#39;char/iran.jpg&#39;&gt;&quot;)
-(print: &quot;&lt;img src=&#39;&quot; + $uri + &quot;&#39;&gt;&quot;)
-(print: &quot;&lt;img src=&#39;&quot; + $uri + &quot;&#39;&gt;&quot;)
+(print: &quot;&lt;img src=&#39;img/mosque.jpg&#39;&gt;&quot;)
+(print: &quot;&lt;img src=&#39;img/battle.jpg&#39;&gt;&quot;)
 I am an Iranian . Lapis lazuli, this deep blue gemstone, holds significant importance in our history and culture. It is not only a beautiful adornment but also symbolizes power and divine representation. Before arriving in Iran, we have seen how the Egyptians and Mesopotamians revered lapis lazuli in the ancient world, and how Afghans and Chinese used this blue in sacred Buddhist caves and temples. Next, you will see how Muslims used and cherished this color in their own unique way.
 
  During the Persian Empire, lapis lazuli was widely used to decorate palaces and mosques. Our craftsmen polished lapis lazuli into exquisite gems, used for inlaying crowns, swords, and other precious items. In the palaces of Persepolis, the decoration with lapis lazuli made the architecture appear grand and majestic.
@@ -97,7 +97,8 @@ I hope through my narration, you can better understand the importance of lapis l
 
 
 [[Previous|Uzbekistan]]
-[[Next|Iraq]]</tw-passagedata><tw-passagedata pid="11" name="Iraq" tags="" position="700,600" size="100,100">(print: &quot;&lt;img src=&#39;&quot; + $uri + &quot;&#39;&gt;&quot;)
+[[Next|Iraq]]</tw-passagedata><tw-passagedata pid="11" name="Iraq" tags="" position="700,600" size="100,100">(print: &quot;&lt;img src=&#39;char/iran.jpg&#39;&gt;&quot;)
+(print: &quot;&lt;img src=&#39;img/plant.jpg&#39;&gt;&quot;)
 As we mentioned, In ancient Mesopotamia, lapis lazuli was revered as a sacred gemstone, often used in religious rituals and court decorations. The Sumerians, Babylonians, and Assyrians all utilized lapis lazuli to create statues of gods and amulets. Archaeologists discovered numerous jewelry pieces and ornaments made from lapis lazuli in the royal tombs of Ur, showcasing our ancestors&#39; love and reverence for this gemstone.
 
 In modern times, we use it in various manuscripts(books and documents etc.).
@@ -107,7 +108,7 @@ This work is a pharmacopeia (related to medicinal substances) that also describe
 
 [[Previous|Iran]]
 [[Next|Turkey]]</tw-passagedata><tw-passagedata pid="12" name="Turkey" tags="" position="875,600" size="100,100">(print: &quot;&lt;img src=&#39;char/turk.jpg&#39;&gt;&quot;)
-(print: &quot;&lt;img src=&#39;&quot; + $uri + &quot;&#39;&gt;&quot;)
+(print: &quot;&lt;img src=&#39;img/turkChrist.jpg&#39;&gt;&quot;)
 Welcome to Turkey,let us explore the  Byzantine times, . In previous stops, we have seen how color used in Buhddhism and Islamic culture.here,we would explore something different and being very close to our final destination-Italy in Renaissance. 
 This deep blue gemstone traveled via the Silk Road from the distant Badakhshan province of Afghanistan to our land. It has been widely used to adorn churches, create icons, and embellish noble jewelry. The blue of lapis lazuli symbolizes the infinity of heaven and the steadfastness of faith, shining with divine radiance in murals and jewelry.
 
@@ -122,8 +123,9 @@ Lapis lazuli arrived in our land via the Silk Road, bringing with it the mystery
 
 [[Previous|Iraq]]
 [[Next|Italy]]</tw-passagedata><tw-passagedata pid="13" name="Afghanistan" tags="" position="325,600" size="100,100">(print: &quot;&lt;img src=&#39;char/afghan.jpg&#39;&gt;&quot;)
-(print: &quot;&lt;img src=&#39;kingdig.jpg&#39;&gt;&quot;)
-(print: &quot;&lt;img src=&#39;bodhi.jpeg&#39;&gt;&quot;)
+(print: &quot;&lt;img src=&#39;img/kingdig.jpg&#39;&gt;&quot;)
+(print: &quot;&lt;img src=&#39;img/bodhi.jpeg&#39;&gt;&quot;)
+(print: &quot;&lt;img src=&#39;img.assault&#39;&gt;&quot;)
 I am Nefertiti, the illustrious queen of ancient Egypt. Today, I shall tell you about a precious stone that played a significant role in the ancient world: lapis lazuli.
 Lapis lazuli, with its deep, celestial blue, reminiscent of the night sky adorned with stars, has long been regarded as a symbol of divinity and power. This stone was highly treasured not only in our magnificent Egypt but also in the distant land of Babylon. Remarkably, the source of this revered stone lies in the faraway mountains of Afghanistan, a testament to its value and the extensive trade networks of ancient times.
 In ancient Mesopotamia, lapis lazuli was revered as a sacred gemstone, often used in religious rituals and court decorations. The Sumerians, Babylonians, and Assyrians all utilized lapis lazuli to create statues of gods and amulets. Archaeologists discovered numerous jewelry pieces and ornaments made from lapis lazuli in the royal tombs of Ur, showcasing our ancestors&#39; love and reverence for this gemstone.
